<resources>
    <string name="app_name">MyOneRowCode</string>
    <!--<string name="app_name">第一行代码</string>-->
    <string name="hello_world">你好 世界!</string>

    <string name="main_button_1_text">跳转主页</string>
    <string name="main_button_2_text">跳转我的信息</string>
    <string name="main_button_3_text">打开外部浏览器</string>
    <string name="main_button_4_text">打开电话</string>
    <string name="main_button_5_text">返回上一页</string>
    <string name="main_button_6_text">对话框</string>
    <string name="main_editText_1_text">输入框提示信息</string>
    <string name="main_button_7_text">AlertDialog</string>
    <string name="main_button_8_text">显示/隐藏状态ProgressBar</string>
    <string name="main_button_9_text">ListView</string>
    <string name="main_button_10_text">RecyclerView</string>
    <string name="main_button_11_text">消息对话列表</string>
    <string name="main_button_12_text">Broadcast</string>
    <string name="main_button_13_text">强制下线</string>
    <string name="main_button_14_text">获取设备IMEI</string>
    <string name="main_menu_item_1_title">add</string>
    <string name="main_menu_item_2_title">remove</string>
    <string name="main_menu_item_3_title">退出应用</string>

    <string name="my_information_button_1_text">按钮</string>

    <string name="home_button_1_text">数据返回main页面</string>
    <string name="home_button_home_fragment_text">首页</string>
    <string name="home_button_mylist_fragment_text">列表</string>

    <string name="dialog_text_1">我是对对话框</string>

    <string name="title_textview_text">我是titel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hf_text_view_1_text">我是home也得的fragment</string>
    <string name="mlf_text_view_1_text">我是list也的fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


</resources>
