<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--<include layout="@layout/title_layout" />-->
            <com.example.lhd.myonerowcode.common.TitleActivity
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="我是main页面，你咬我呀，略略略~"
                android:textColor="@color/colorRed"
                android:textSize="20sp" />

            <Button
                android:id="@+id/main_button_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_button_1_text" />

            <Button
                android:id="@+id/main_button_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_button_2_text" />

            <Button
                android:id="@+id/main_button_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_button_3_text" />

            <Button
                android:id="@+id/main_button_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_button_7_text"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/main_button_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_button_4_text" />

            <Button
                android:id="@+id/main_button_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_button_5_text" />

            <Button
                android:id="@+id/main_button_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_button_6_text" />

            <!--<EditText-->
            <!--android:id="@+id/main_editText_1"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:background="@null"-->
            <!--android:hint="@string/main_editText_1_text"-->
            <!--android:maxLines="3"-->
            <!--android:padding="10sp"-->
            <!--android:textColorHint="@color/colorAccent" />-->

            <Button
                android:id="@+id/main_button_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_button_8_text"
                android:textAllCaps="false" />

            <ProgressBar
                android:id="@+id/main_progressbar_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <Button
                android:id="@+id/main_button_9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_button_9_text"
                android:textAllCaps="false"
                android:textColor="@color/colorRed" />

            <Button
                android:id="@+id/main_button_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_button_10_text"
                android:textAllCaps="false"
                android:textColor="@color/colorRed" />

            <Button
                android:id="@+id/main_button_11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_button_11_text"
                android:textAllCaps="false"
                android:textColor="@color/colorRed" />

            <Button
                android:id="@+id/main_button_12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_button_12_text"
                android:textAllCaps="false"
                android:textColor="@color/colorRed" />

            <Button
                android:id="@+id/main_button_13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_button_13_text"
                android:textAllCaps="false"
                android:textColor="@color/colorRed" />

            <Button
                android:id="@+id/main_button_14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_button_14_text"
                android:textAllCaps="false"
                android:textColor="@color/colorRed" />

            <Button
                android:id="@+id/main_button_storage_15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="数据本地存储" />

            <Button
                android:id="@+id/content_resolver_16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="内容提供器" />

            <Button
                android:id="@+id/main_notification_bar_17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="通知栏通知" />

            <Button
                android:id="@+id/main_media_18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="打开媒体设备" />

            <Button
                android:id="@+id/main_web_view_19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="WebView使用"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/main_http_url_connection_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="HttpURLConnection请求"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/main_my_test_service_21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="自定义Service"
                android:textAllCaps="false" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>
